--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <title>myFlix</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@100;300;400;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="app-container"></div>
